--- a/CSS transitions/width change/index.html
+++ b/CSS transitions/width change/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Transition</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
